--- a/mythos.css
+++ b/mythos.css
@@ -59,9 +59,8 @@ body {
 	margin: 45px auto 10px auto;
 }
 
-.button-container a {
-	background-color: red;
-	border-color: red;
+.button-container.defend-heir {
+	margin-top: 195px; 
 }
 
 .restart.button {
@@ -413,7 +412,7 @@ body {
 
 /////---------------------- */
 
-.start-quest {
+.start-quest.row {
 	display: none;
 	background-color: #6B98BB;
 }
